--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <li class="actualweb"><a href="contact.html">CONTACT</a></li>
         </ul>
     </header>
-    <div class="headercontainer">
+    <div class="headercontainer"> <!--Header picture -->
       <div class="header-content">
           <img src="logo.png" alt="Favicon" class="favicon">
           <h3>Your health is our goal. Humanistic Clinic</h3>
