--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li class="button"><a href="contact.html">CONTACT</a></li>
         </ul>
     </header>
-    <div class="headercontainer">
+    <div class="headercontainer"> <!--Header picture -->
       <img src="cabecera.jpg" alt="Cabeceraphoto" class="Cabeceraphoto">
       <div class="header-content2">
         <img src="logo.png" alt="Favicon2" class="favicon2">
@@ -52,50 +52,46 @@
       </a>
    </div>
 
+   <!--Main content-->
    <main class="whitebackground">
     <div class="content">
-      <div class="container1">
-       <div class="first-box">
+      <div class="container1"> <!--CONTAINER1-->
+       <div class="first-box"> <!--First box -->
           <h3 class="contenttitle3">Weight loss linked to healthy eating</h3>
           <p class="fontarticle">Participants who ate the most vegetables and consumed the fewest processed foods, 
             sugary drinks, and unhealthy fats lost the most pounds.</p>
           <a href="#" class="readmore">READ MORE</a>
         </div>
-        <div class="other-box purple"> 🛒
+        <div class="other-box purple"> 🛒  <!--Other box -->
           <h2>More than 300 food products</h2>
           <p class="fontarticle">Explore our extensive selection of over 300 food products for diverse culinary experiences and nutritional choices.</p>
         </div>
-        <div class="other-box red"> ❤️
+        <div class="other-box red"> ❤️ <!--Other box -->
           <h2>Only natural products</h2>
           <p class="fontarticle">Discover our exclusive range featuring only natural products for pure, wholesome goodness you can trust.</p>
         </div>
-        <div class="other-box black"> 🪶
+        <div class="other-box black"> 🪶 <!--Other box -->
           <h2>Significant weight loss</h2>
           <p class="fontarticle">Experience significant weight loss with our tailored programs and effective solutions for a healthier lifestyle.</p>
         </div>
       </div>
     </div>
   </main>
-
-
-
-  <div class="container2">
-    <div class="fixed-image">
+  <div class="container2"> <!--CONTAINER2-->
+    <div class="fixed-image"> <!-- Fixed image -->
         <img src="raspberry.jpg" alt="Raspberry picture">
     </div>
-    <div class="transparentbox">
+    <div class="transparentbox"> <!--Transparent box-->
        <h2 class="fontarticle2">Start a lifestyle that lasts forever.</h2>
        <a href="" class="read-more">MAKE AN APPOINTMENT</a>
     </div>
 </div>
-
-
 <main class="whitebackground">
-  <div class="container3">
-    <div class="picture-box">
+  <div class="container3"> <!--CONTAINER3-->
+    <div class="picture-box"> <!--Picture box-->
         <img src="woman-fruit.jpg" alt="Woman holding a fruit">
     </div>
-    <div class="centerbox">
+    <div class="centerbox"> <!--Center box-->
       <h2 class="fontarticle2">How can I eat healthier?</h2>
       <p class="fontarticle">Eating healthier doesn't need to be overwhelming. Start by adding more fruits and 
         vegetables to your meals for a nutrient boost. Replace processed snacks with wholesome options like nuts or 
@@ -109,8 +105,6 @@
     <div class="globe blue"></div>
 </div>
 </main>
-
-
 
     <!-- FOOTER-->
     <footer>
