--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
         </ul>
       <div class="header-content">
     </header>
-    <div class="headercontainer">
+    <div class="headercontainer"> <!--Header picture -->
       <div class="header-content">
           <img src="logo.png" alt="Favicon" class="favicon">
           <h3>Your health is our goal. Humanistic Clinic</h3>
@@ -248,15 +248,4 @@
       <div class="footertext2">Privacy Policy</div>
     </footer>
    </body>
-</html>
-
-
-
-
-
-
-
-
-  </body>
-
 </html>
