--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,6 @@
     </div>
 
       <p class="contenttitle2">Contact Us</p>
-      <!-- Main Content -->
      <main class="content">
           <!-- Recent News Section -->
           <section class="news">
@@ -60,6 +59,8 @@
                       <small>16 February 2024</small>
                   </div>
               </div>
+          <!--Main content-->  
+          <main>
               <div class="fontarticle">
                   <p><b>Our Social Media</b></p>
                   <div class="SMbox">
@@ -160,6 +161,7 @@
         </section>    
       </div>
     </main>
+
     <!-- FOOTER-->
     <footer>
       <div class="footer-container">
