--- a/products.html
+++ b/products.html
@@ -35,8 +35,7 @@
     </div>
 
       <p class="contenttitle">Products</p>
-      <!-- Main Content -->
-      <main class="content">
+      <div class="content">
             <!-- Recent News Section -->
             <section class="news">
                 <h2 class="news-title">Recent News</h2>
@@ -82,7 +81,8 @@
                     </div>
                 </div>
             </section>
-        
+      <!-- Main Content -->
+      <main>
         <!-- Expert advice Section -->
         <section class="catalog-section">
           <h3 class="contenttitle3">The best advice from the experts</h3>
@@ -204,6 +204,7 @@
            </table>
         </section>
     </main>
+    </div>
     <!-- FOOTER-->
     <footer>
       <div class="footer-container">
