--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
     </div>
 
       <p class="contenttitle2">Contact Us</p>
+      <!-- Main Content -->
      <main class="content">
           <!-- Recent News Section -->
           <section class="news">
@@ -59,8 +60,6 @@
                       <small>16 February 2024</small>
                   </div>
               </div>
-          <!--Main content-->  
-          <main>
               <div class="fontarticle">
                   <p><b>Our Social Media</b></p>
                   <div class="SMbox">
@@ -161,7 +160,6 @@
         </section>    
       </div>
     </main>
-
     <!-- FOOTER-->
     <footer>
       <div class="footer-container">
